@@ -4,19 +4,23 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyDouble;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.when;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.http.MediaType;
 import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.web.servlet.MockMvc;
@@ -25,56 +29,76 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.nomorelaps.adapters.in.api.ParkingRequest;
 import com.nomorelaps.business.interfaces.IParkingService;
 import com.nomorelaps.domain.models.Parking;
+import com.nomorelaps.infrastructure.security.SecurityService;
 
 /**
  * Integration tests for ParkingController.
- *
+ * Verifies parking management including CRUD, nearby search, and company-specific filtering.
+ * 
  * @author nexphernandez
- * @version 1.0.0
+ * @version 1.1.0
  */
 @SpringBootTest
-@AutoConfigureMockMvc
+@AutoConfigureMockMvc(addFilters = false)
 class ParkingControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
 
-    @MockBean
-    private IParkingService parkingService;
-
     @Autowired
     private ObjectMapper objectMapper;
 
+    @MockitoBean
+    private IParkingService parkingService;
+
+    @MockitoBean(name = "securityService")
+    private SecurityService securityService;
+
+    private ParkingRequest validRequest;
+    private Parking sampleParking;
+
+    @BeforeEach
+    void setUp() {
+        validRequest = new ParkingRequest();
+        validRequest.setName("Central Station Parking");
+        validRequest.setAddress("Main Ave 123");
+        validRequest.setLatitude(40.416775);
+        validRequest.setLongitude(-3.703790);
+
+        sampleParking = new Parking(1L);
+        sampleParking.setName("Central Station Parking");
+        sampleParking.setAddress("Main Ave 123");
+        sampleParking.setLatitude(40.416775);
+        sampleParking.setLongitude(-3.703790);
+
+        when(securityService.isCompanyOwner(any())).thenReturn(true);
+    }
+
     @Test
-    @DisplayName("GET /api/parkings - Should return list (public endpoint)")
-    void shouldReturnAllParkings() throws Exception {
-        Parking p1 = new Parking(1L);
-        p1.setName("Park A");
-        Parking p2 = new Parking(2L);
-        p2.setName("Park B");
-        when(parkingService.findAll()).thenReturn(Arrays.asList(p1, p2));
+    @DisplayName("GET /api/parkings - Success: Should return list of all parkings")
+    void shouldReturnAllParkingsSuccessfully() throws Exception {
+        when(parkingService.findAll()).thenReturn(List.of(sampleParking));
 
         mockMvc.perform(get("/api/parkings"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$").isArray())
-                .andExpect(jsonPath("$.length()").value(2));
+                .andExpect(jsonPath("$[0].name").value("Central Station Parking"));
     }
 
     @Test
-    @DisplayName("GET /api/parkings/{id} - Found (public endpoint)")
-    void shouldReturnParkingById() throws Exception {
-        Parking parking = new Parking(1L);
-        parking.setName("Test Parking");
-        when(parkingService.findById(1L)).thenReturn(Optional.of(parking));
+    @DisplayName("GET /api/parkings/{id} - Success: Should return parking details")
+    void shouldReturnParkingByIdSuccessfully() throws Exception {
+        when(parkingService.findById(1L)).thenReturn(Optional.of(sampleParking));
 
         mockMvc.perform(get("/api/parkings/1"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").value(1));
+                .andExpect(jsonPath("$.id").value(1L))
+                .andExpect(jsonPath("$.name").value("Central Station Parking"));
     }
 
     @Test
-    @DisplayName("GET /api/parkings/{id} - Not Found (public endpoint)")
-    void shouldReturn404WhenParkingNotFound() throws Exception {
+    @DisplayName("GET /api/parkings/{id} - Failure: Should return 404 when missing")
+    void shouldReturnNotFoundWhenParkingIsMissing() throws Exception {
         when(parkingService.findById(99L)).thenReturn(Optional.empty());
 
         mockMvc.perform(get("/api/parkings/99"))
@@ -82,30 +106,36 @@ class ParkingControllerTest {
     }
 
     @Test
-    @DisplayName("POST /api/parkings - Created (requires COMPANY role)")
+    @DisplayName("POST /api/parkings - Success: Should create parking")
     @WithMockUser(roles = "COMPANY")
-    void shouldCreateParking() throws Exception {
-        ParkingRequest request = new ParkingRequest();
-        request.setName("New Parking");
-        request.setAddress("Test Street");
-        request.setLatitude(40.4168);
-        request.setLongitude(-3.7038);
-
-        Parking saved = new Parking(1L);
-        saved.setName("New Parking");
-        when(parkingService.create(any(Parking.class))).thenReturn(saved);
+    void shouldCreateParkingSuccessfully() throws Exception {
+        when(parkingService.create(any(Parking.class))).thenReturn(sampleParking);
 
         mockMvc.perform(post("/api/parkings")
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(request)))
+                .content(objectMapper.writeValueAsString(validRequest)))
                 .andExpect(status().isCreated())
-                .andExpect(jsonPath("$.id").value(1));
+                .andExpect(jsonPath("$.id").value(1L));
     }
 
     @Test
-    @DisplayName("DELETE /api/parkings/{id} - No Content (requires COMPANY role)")
+    @DisplayName("PUT /api/parkings/{id} - Success: Should update parking")
     @WithMockUser(roles = "COMPANY")
-    void shouldDeleteParking() throws Exception {
+    void shouldUpdateParkingSuccessfully() throws Exception {
+        sampleParking.setName("Updated Name");
+        when(parkingService.update(any(Parking.class))).thenReturn(sampleParking);
+
+        mockMvc.perform(put("/api/parkings/1")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(validRequest)))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.name").value("Updated Name"));
+    }
+
+    @Test
+    @DisplayName("DELETE /api/parkings/{id} - Success: Should return 204")
+    @WithMockUser(roles = "COMPANY")
+    void shouldDeleteParkingSuccessfully() throws Exception {
         doNothing().when(parkingService).deleteById(1L);
 
         mockMvc.perform(delete("/api/parkings/1"))
@@ -113,81 +143,38 @@ class ParkingControllerTest {
     }
 
     @Test
-    @DisplayName("POST /api/parkings - Forbidden without COMPANY role")
-    @WithMockUser(roles = "USER")
-    void shouldReturnForbiddenWithoutCompanyRole() throws Exception {
-        mockMvc.perform(post("/api/parkings")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content("{}"))
-                .andExpect(status().isForbidden());
-    }
+    @DisplayName("GET /api/parkings/search - Success: Should return matching results")
+    void shouldSearchParkingsSuccessfully() throws Exception {
+        when(parkingService.searchByNameOrAddress("Central")).thenReturn(List.of(sampleParking));
 
-    @Test
-    @DisplayName("GET /api/parkings - Returns 200 even without authentication (permitAll)")
-    void shouldReturnOkWithoutUserForPublicEndpoint() throws Exception {
-        when(parkingService.findAll()).thenReturn(Collections.emptyList());
-        mockMvc.perform(get("/api/parkings"))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    @DisplayName("GET /api/parkings/search - Should return results")
-    @WithMockUser
-    void shouldSearchParkings() throws Exception {
-        Parking p = new Parking(1L);
-        p.setName("Matching Parking");
-        when(parkingService.searchByNameOrAddress("Matching")).thenReturn(Collections.singletonList(p));
-
-        mockMvc.perform(get("/api/parkings/search").param("query", "Matching"))
+        mockMvc.perform(get("/api/parkings/search").param("query", "Central"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$").isArray());
+                .andExpect(jsonPath("$").isArray())
+                .andExpect(jsonPath("$[0].name").value("Central Station Parking"));
     }
+
     @Test
-    @DisplayName("GET /api/parkings/nearby - Should return nearby results")
-    void shouldFindNearbyParkings() throws Exception {
-        Parking p = new Parking(1L);
-        p.setName("Nearby Parking");
-        when(parkingService.findNearby(anyDouble(), anyDouble(), anyDouble())).thenReturn(Collections.singletonList(p));
+    @DisplayName("GET /api/parkings/nearby - Success: Should return nearby results")
+    void shouldFindNearbyParkingsSuccessfully() throws Exception {
+        when(parkingService.findNearby(anyDouble(), anyDouble(), anyDouble())).thenReturn(List.of(sampleParking));
 
         mockMvc.perform(get("/api/parkings/nearby")
-                .param("lat", "40.0")
-                .param("lng", "-3.0")
+                .param("lat", "40.41")
+                .param("lng", "-3.70")
                 .param("radius", "5.0"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$").isArray());
     }
 
     @Test
-    @DisplayName("GET /api/parkings/company/{id} - Should return company results")
-    @WithMockUser
-    void shouldFindParkingsByCompany() throws Exception {
-        Parking p = new Parking(1L);
-        when(parkingService.findAllByCompanyId(10L)).thenReturn(Collections.singletonList(p));
+    @DisplayName("GET /api/parkings/company/{id} - Success: Should return company parkings")
+    @WithMockUser(roles = "COMPANY")
+    void shouldFindParkingsByCompanyIdSuccessfully() throws Exception {
+        when(parkingService.findAllByCompanyId(10L)).thenReturn(List.of(sampleParking));
 
         mockMvc.perform(get("/api/parkings/company/10"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$").isArray());
-    }
-
-    @Test
-    @DisplayName("PUT /api/parkings/{id} - Updated")
-    @WithMockUser(roles = "COMPANY")
-    void shouldUpdateParking() throws Exception {
-        ParkingRequest request = new ParkingRequest();
-        request.setName("Updated Parking");
-        request.setAddress("New Address");
-        request.setLatitude(1.0);
-        request.setLongitude(1.0);
-
-        Parking updated = new Parking(1L);
-        updated.setName("Updated Parking");
-        when(parkingService.update(any(Parking.class))).thenReturn(updated);
-
-        mockMvc.perform(put("/api/parkings/1")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.name").value("Updated Parking"));
+                .andExpect(jsonPath("$").isArray())
+                .andExpect(jsonPath("$[0].id").value(1L));
     }
 }
-
