@@ -3,64 +3,105 @@ package com.nomorelaps.adapters.in.rest;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.when;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.patch;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
+import org.springframework.test.context.bean.override.mockito.MockitoSpyBean;
 import org.springframework.http.MediaType;
 import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.web.servlet.MockMvc;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.nomorelaps.adapters.in.api.SanctionRequest;
+import com.nomorelaps.adapters.mapper.SanctionMapper;
 import com.nomorelaps.business.interfaces.ISanctionService;
 import com.nomorelaps.domain.models.Sanction;
 
 /**
  * Integration tests for SanctionController.
- *
+ * Verifies sanction management including creation, retrieval by user/company/reservation,
+ * and payment status updates.
+ * 
  * @author nexphernandez
- * @version 1.0.0
+ * @version 1.1.0
  */
 @SpringBootTest
-@AutoConfigureMockMvc
+@AutoConfigureMockMvc(addFilters = false)
 class SanctionControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
 
-    @MockBean
-    private ISanctionService sanctionService;
-
     @Autowired
     private ObjectMapper objectMapper;
 
-    @Test
-    @DisplayName("GET /api/sanctions/{id} - Found")
-    @WithMockUser
-    void shouldReturnSanctionById() throws Exception {
-        Sanction sanction = new Sanction(1L);
-        sanction.setAmount(50.0);
-        when(sanctionService.findById(1L)).thenReturn(Optional.of(sanction));
+    @MockitoBean
+    private ISanctionService sanctionService;
 
-        mockMvc.perform(get("/api/sanctions/1"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").value(1));
+    @MockitoSpyBean
+    private SanctionMapper sanctionMapper;
+
+    private SanctionRequest validRequest;
+    private Sanction sampleSanction;
+
+    @BeforeEach
+    void setUp() {
+        validRequest = new SanctionRequest();
+        validRequest.setAmount(25.0);
+        validRequest.setReason("Unauthorized extended stay");
+        validRequest.setReservationId(10L);
+        validRequest.setUserId(5L);
+
+        sampleSanction = new Sanction(1L);
+        sampleSanction.setAmount(25.0);
+        sampleSanction.setReason("Unauthorized extended stay");
+        sampleSanction.setPaid(false);
     }
 
     @Test
-    @DisplayName("GET /api/sanctions/{id} - Not Found")
+    @DisplayName("POST /api/sanctions - Success: Should create sanction")
     @WithMockUser
-    void shouldReturn404WhenSanctionNotFound() throws Exception {
+    void shouldCreateSanctionSuccessfully() throws Exception {
+        when(sanctionService.create(any(Sanction.class))).thenReturn(sampleSanction);
+
+        mockMvc.perform(post("/api/sanctions")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(validRequest)))
+                .andExpect(status().isCreated())
+                .andExpect(jsonPath("$.id").value(1L))
+                .andExpect(jsonPath("$.amount").value(25.0));
+    }
+
+    @Test
+    @DisplayName("GET /api/sanctions/{id} - Success: Should return sanction details")
+    @WithMockUser
+    void shouldReturnSanctionByIdSuccessfully() throws Exception {
+        when(sanctionService.findById(1L)).thenReturn(Optional.of(sampleSanction));
+
+        mockMvc.perform(get("/api/sanctions/1"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.id").value(1L));
+    }
+
+    @Test
+    @DisplayName("GET /api/sanctions/{id} - Failure: Should return 404 when missing")
+    @WithMockUser
+    void shouldReturnNotFoundWhenSanctionIsMissing() throws Exception {
         when(sanctionService.findById(99L)).thenReturn(Optional.empty());
 
         mockMvc.perform(get("/api/sanctions/99"))
@@ -68,32 +109,57 @@ class SanctionControllerTest {
     }
 
     @Test
-    @DisplayName("GET /api/sanctions/user/{userId} - List")
+    @DisplayName("GET /api/sanctions/user/{userId} - Success: Should return user sanctions")
     @WithMockUser
-    void shouldReturnSanctionsByUser() throws Exception {
-        Sanction s1 = new Sanction(1L);
-        when(sanctionService.findByUserId(1L)).thenReturn(Arrays.asList(s1));
+    void shouldReturnSanctionsByUserIdSuccessfully() throws Exception {
+        when(sanctionService.findByUserId(5L)).thenReturn(List.of(sampleSanction));
 
-        mockMvc.perform(get("/api/sanctions/user/1"))
+        mockMvc.perform(get("/api/sanctions/user/5"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$").isArray())
+                .andExpect(jsonPath("$[0].id").value(1L));
+    }
+
+    @Test
+    @DisplayName("GET /api/sanctions/company/{companyId} - Success: Should return company sanctions")
+    @WithMockUser
+    void shouldReturnSanctionsByCompanyIdSuccessfully() throws Exception {
+        when(sanctionService.findByCompanyId(100L)).thenReturn(List.of(sampleSanction));
+
+        mockMvc.perform(get("/api/sanctions/company/100"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$").isArray());
     }
 
     @Test
-    @DisplayName("GET /api/sanctions/reservation/{id} - List")
+    @DisplayName("GET /api/sanctions/reservation/{id} - Success: Should return reservation sanctions")
     @WithMockUser
-    void shouldReturnSanctionsByReservation() throws Exception {
-        when(sanctionService.findByReservationId(1L)).thenReturn(Collections.emptyList());
+    void shouldReturnSanctionsByReservationIdSuccessfully() throws Exception {
+        when(sanctionService.findByReservationId(10L)).thenReturn(List.of(sampleSanction));
 
-        mockMvc.perform(get("/api/sanctions/reservation/1"))
+        mockMvc.perform(get("/api/sanctions/reservation/10"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$").isArray());
+                .andExpect(jsonPath("$[0].id").value(1L));
     }
 
     @Test
-    @DisplayName("DELETE /api/sanctions/{id} - No Content")
+    @DisplayName("PUT /api/sanctions/{id} - Success: Should update sanction")
     @WithMockUser
-    void shouldDeleteSanction() throws Exception {
+    void shouldUpdateSanctionSuccessfully() throws Exception {
+        sampleSanction.setAmount(30.0);
+        when(sanctionService.update(any(Sanction.class))).thenReturn(sampleSanction);
+
+        mockMvc.perform(put("/api/sanctions/1")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(validRequest)))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.amount").value(30.0));
+    }
+
+    @Test
+    @DisplayName("DELETE /api/sanctions/{id} - Success: Should return 204")
+    @WithMockUser
+    void shouldDeleteSanctionSuccessfully() throws Exception {
         doNothing().when(sanctionService).deleteById(1L);
 
         mockMvc.perform(delete("/api/sanctions/1"))
@@ -101,73 +167,14 @@ class SanctionControllerTest {
     }
 
     @Test
-    @DisplayName("PATCH /api/sanctions/{id}/pay - Should pay sanction")
+    @DisplayName("PATCH /api/sanctions/{id}/pay - Success: Should mark as paid")
     @WithMockUser
-    void shouldPaySanction() throws Exception {
-        Sanction paid = new Sanction(1L);
-        paid.setAmount(50.0);
-        paid.setPaid(true);
-        when(sanctionService.paySanction(1L)).thenReturn(paid);
+    void shouldPaySanctionSuccessfully() throws Exception {
+        sampleSanction.setPaid(true);
+        when(sanctionService.paySanction(1L)).thenReturn(sampleSanction);
 
         mockMvc.perform(patch("/api/sanctions/1/pay"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").value(1));
-    }
-
-    @Test
-    @DisplayName("POST /api/sanctions - Created")
-    @WithMockUser
-    void shouldCreateSanction() throws Exception {
-        SanctionRequest request = new SanctionRequest();
-        request.setAmount(50.0);
-        request.setReason("Overtime");
-        request.setReservationId(1L);
-        request.setUserId(1L);
-
-        Sanction saved = new Sanction(1L);
-        when(sanctionService.create(any(Sanction.class))).thenReturn(saved);
-
-        mockMvc.perform(post("/api/sanctions")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isCreated())
-                .andExpect(jsonPath("$.id").value(1));
-    }
-
-    @Test
-    @DisplayName("POST /api/sanctions - Bad Request")
-    @WithMockUser
-    void shouldReturn400WhenInvalidCreate() throws Exception {
-        mockMvc.perform(post("/api/sanctions")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content("{}"))
-                .andExpect(status().isBadRequest());
-    }
-
-    @Test
-    @DisplayName("PUT /api/sanctions/{id} - Updated")
-    @WithMockUser
-    void shouldUpdateSanction() throws Exception {
-        SanctionRequest request = new SanctionRequest();
-        request.setAmount(50.0);
-        request.setReason("Updated Reason");
-        request.setReservationId(1L);
-        request.setUserId(1L);
-
-        Sanction updated = new Sanction(1L);
-        when(sanctionService.update(any(Sanction.class))).thenReturn(updated);
-
-        mockMvc.perform(put("/api/sanctions/1")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").value(1));
-    }
-
-    @Test
-    @DisplayName("GET /api/sanctions - Forbidden without user")
-    void shouldReturnForbiddenWithoutUser() throws Exception {
-        mockMvc.perform(get("/api/sanctions/1"))
-                .andExpect(status().isForbidden());
+                .andExpect(jsonPath("$.paid").value(true));
     }
 }
