@@ -4,8 +4,6 @@ import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -18,19 +16,23 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import com.nomorelaps.adapters.out.persistence.interfaces.IParkingPersistenceAdapter;
+import com.nomorelaps.business.interfaces.IParkingSpotService;
 import com.nomorelaps.domain.models.Parking;
+import com.nomorelaps.domain.models.ParkingSpot;
 
 /**
- * Unit tests for ParkingService covering all business methods.
- *
- * @author nexphernandez
- * @version 1.0.0
+ * Unit tests for ParkingService.
+ * Verifies business logic for parking management, including spot auto-generation
+ * and proximity search.
  */
 @ExtendWith(MockitoExtension.class)
 class ParkingServiceTest {
 
     @Mock
     private IParkingPersistenceAdapter persistencePort;
+
+    @Mock
+    private IParkingSpotService parkingSpotService;
 
     @InjectMocks
     private ParkingService parkingService;
@@ -40,155 +42,105 @@ class ParkingServiceTest {
     @BeforeEach
     void setUp() {
         testParking = new Parking(1L);
-        testParking.setName("Test Parking");
-        testParking.setAddress("Test Street 1");
+        testParking.setName("Plaza Mayor");
+        testParking.setAddress("Calle Principal 1");
         testParking.setLatitude(40.4168);
         testParking.setLongitude(-3.7038);
     }
 
-    // ── create ──────────────────────────────────────────────────────────────
-
     @Test
-    @DisplayName("create - Should delegate to persistence and return saved parking")
-    void shouldCreateParking() {
-        when(persistencePort.save(any(Parking.class))).thenReturn(testParking);
-
+    @DisplayName("create - Should save parking and return result")
+    void shouldCreateParkingSuccessfully() {
+        when(persistencePort.save(testParking)).thenReturn(testParking);
         Parking result = parkingService.create(testParking);
-
         assertNotNull(result);
-        assertEquals("Test Parking", result.getName());
         verify(persistencePort).save(testParking);
     }
 
-    // ── findById ─────────────────────────────────────────────────────────────
+    @Test
+    @DisplayName("create - Should auto-generate spots when totalSpots is positive")
+    void shouldGenerateSpotsWhenPositive() {
+        testParking.setTotalSpots(2);
+        when(persistencePort.save(testParking)).thenReturn(testParking);
+
+        parkingService.create(testParking);
+
+        verify(parkingSpotService, times(2)).create(any(ParkingSpot.class));
+    }
 
     @Test
-    @DisplayName("findById - Should return parking when found")
-    void shouldFindParkingById() {
+    @DisplayName("create - Should not generate spots when totalSpots is null")
+    void shouldNotGenerateSpotsWhenNull() {
+        testParking.setTotalSpots(null);
+        when(persistencePort.save(testParking)).thenReturn(testParking);
+
+        parkingService.create(testParking);
+
+        verify(parkingSpotService, never()).create(any());
+    }
+
+    @Test
+    @DisplayName("create - Should not generate spots when totalSpots is zero or negative")
+    void shouldNotGenerateSpotsWhenNonPositive() {
+        testParking.setTotalSpots(0);
+        when(persistencePort.save(testParking)).thenReturn(testParking);
+
+        parkingService.create(testParking);
+
+        verify(parkingSpotService, never()).create(any());
+    }
+
+    @Test
+    @DisplayName("findById - Should return parking if found")
+    void shouldReturnParkingById() {
         when(persistencePort.findById(1L)).thenReturn(Optional.of(testParking));
-
-        Optional<Parking> result = parkingService.findById(1L);
-
-        assertTrue(result.isPresent());
-        assertEquals(1L, result.get().getId());
+        assertTrue(parkingService.findById(1L).isPresent());
     }
-
-    @Test
-    @DisplayName("findById - Should return empty when not found")
-    void shouldReturnEmptyWhenParkingNotFound() {
-        when(persistencePort.findById(99L)).thenReturn(Optional.empty());
-
-        Optional<Parking> result = parkingService.findById(99L);
-
-        assertFalse(result.isPresent());
-    }
-
-    // ── findAll ───────────────────────────────────────────────────────────────
 
     @Test
     @DisplayName("findAll - Should return all parkings")
-    void shouldFindAllParkings() {
-        Parking p2 = new Parking(2L);
-        p2.setName("Parking B");
-        when(persistencePort.findAll()).thenReturn(Arrays.asList(testParking, p2));
-
-        List<Parking> result = parkingService.findAll();
-
-        assertEquals(2, result.size());
+    void shouldReturnAllParkings() {
+        when(persistencePort.findAll()).thenReturn(List.of(testParking));
+        assertEquals(1, parkingService.findAll().size());
     }
 
     @Test
-    @DisplayName("findAll - Should return empty list when no parkings")
-    void shouldReturnEmptyListWhenNoParkings() {
-        when(persistencePort.findAll()).thenReturn(Collections.emptyList());
-
-        List<Parking> result = parkingService.findAll();
-
-        assertTrue(result.isEmpty());
-    }
-
-    // ── findAllByCompanyId ────────────────────────────────────────────────────
-
-    @Test
-    @DisplayName("findAllByCompanyId - Should return parkings for a company")
-    void shouldFindParkingsByCompany() {
-        when(persistencePort.findByCompanyId(5L)).thenReturn(Arrays.asList(testParking));
-
-        List<Parking> result = parkingService.findAllByCompanyId(5L);
-
+    @DisplayName("findAllByCompanyId - Should return company parkings")
+    void shouldReturnParkingsByCompany() {
+        when(persistencePort.findByCompanyId(10L)).thenReturn(List.of(testParking));
+        List<Parking> result = parkingService.findAllByCompanyId(10L);
         assertEquals(1, result.size());
-        verify(persistencePort).findByCompanyId(5L);
     }
 
-    // ── update ────────────────────────────────────────────────────────────────
-
     @Test
-    @DisplayName("update - Should delegate to persistence save")
+    @DisplayName("update - Should call persistence port")
     void shouldUpdateParking() {
-        testParking.setName("Updated Parking");
         when(persistencePort.save(testParking)).thenReturn(testParking);
-
         Parking result = parkingService.update(testParking);
-
-        assertEquals("Updated Parking", result.getName());
+        assertNotNull(result);
         verify(persistencePort).save(testParking);
     }
 
-    // ── deleteById ────────────────────────────────────────────────────────────
-
     @Test
-    @DisplayName("deleteById - Should call persistence deleteById")
-    void shouldDeleteParkingById() {
-        doNothing().when(persistencePort).deleteById(1L);
-
+    @DisplayName("deleteById - Should call persistence port")
+    void shouldDeleteById() {
         parkingService.deleteById(1L);
-
         verify(persistencePort).deleteById(1L);
     }
 
-    // ── searchByNameOrAddress ─────────────────────────────────────────────────
-
     @Test
-    @DisplayName("searchByNameOrAddress - Should return matching parkings")
-    void shouldSearchParkingsByNameOrAddress() {
-        when(persistencePort.searchByNameOrAddress("Test")).thenReturn(Arrays.asList(testParking));
-
-        List<Parking> result = parkingService.searchByNameOrAddress("Test");
-
+    @DisplayName("searchByNameOrAddress - Should return matching results")
+    void shouldSearchByNameOrAddress() {
+        when(persistencePort.searchByNameOrAddress("Plaza")).thenReturn(List.of(testParking));
+        List<Parking> result = parkingService.searchByNameOrAddress("Plaza");
         assertEquals(1, result.size());
-        assertEquals("Test Parking", result.get(0).getName());
     }
 
     @Test
-    @DisplayName("searchByNameOrAddress - Should return empty when no match")
-    void shouldReturnEmptyWhenNoSearchMatch() {
-        when(persistencePort.searchByNameOrAddress("NOPE")).thenReturn(Collections.emptyList());
-
-        List<Parking> result = parkingService.searchByNameOrAddress("NOPE");
-
-        assertTrue(result.isEmpty());
-    }
-
-    // ── findNearby ────────────────────────────────────────────────────────────
-
-    @Test
-    @DisplayName("findNearby - Should return nearby parkings within radius")
+    @DisplayName("findNearby - Should return results within radius")
     void shouldFindNearbyParkings() {
-        when(persistencePort.findNearby(40.4168, -3.7038, 5.0)).thenReturn(Arrays.asList(testParking));
-
-        List<Parking> result = parkingService.findNearby(40.4168, -3.7038, 5.0);
-
+        when(persistencePort.findNearby(40.0, -3.0, 5.0)).thenReturn(List.of(testParking));
+        List<Parking> result = parkingService.findNearby(40.0, -3.0, 5.0);
         assertEquals(1, result.size());
-        verify(persistencePort).findNearby(40.4168, -3.7038, 5.0);
-    }
-
-    @Test
-    @DisplayName("findNearby - Should return empty when none in radius")
-    void shouldReturnEmptyWhenNoneNearby() {
-        when(persistencePort.findNearby(0.0, 0.0, 1.0)).thenReturn(Collections.emptyList());
-
-        List<Parking> result = parkingService.findNearby(0.0, 0.0, 1.0);
-
-        assertTrue(result.isEmpty());
     }
 }
